--- a/frontend/src/components/disk/disk.scss
+++ b/frontend/src/components/disk/disk.scss
@@ -1,3 +1,5 @@
+@import "../../../src/utils/colors";
+
 
 .disk {
   margin-top: 20px;
@@ -14,6 +16,27 @@
   &__back {
     margin-left: 10px;
   }
+  &__upload-input{
+    display: none;
+  }
+
+  &__upload-label{
+    border: 2px dashed $font-color;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin-left: 10px;
+  }
+}
+
+.drop-area{
+  width: auto;
+  height: calc(100vh - 50px - 40px);
+  margin: 20px;
+  border: dashed $font-color 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
 }
 
 .popup{
