--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -20,6 +20,11 @@
     margin-left: auto;
     margin-right: 20px;
   }
+
+  &__search{
+    width: 200px;
+    margin-left: 30px;
+  }
 }
 
 .container{
