--- a/frontend/src/components/disk/disk.scss
+++ b/frontend/src/components/disk/disk.scss
@@ -37,6 +37,25 @@
     select{
       margin: 0 10px;
     }
+
+  }
+  &__list, &__plate{
+    height: 20px;
+    width: 20px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: no-repeat center center;
+    background-size: contain;
+    margin: 0 10px;
+  }
+  &__list {
+    background-image: url("../../assets/img/list.svg");
+    align-self: end;
+  }
+  &__plate {
+    background-image: url("../../assets/img/plate.svg");
+    align-self: end;
   }
 }
 
