--- a/frontend/src/components/disk/fileList/file/file.scss
+++ b/frontend/src/components/disk/fileList/file/file.scss
@@ -47,6 +47,7 @@
     cursor: pointer;
     align-self: center;
     justify-self: center;
+    color: black;
   }
   &:hover &__delete{
     grid-column-start: 6;
@@ -55,5 +56,37 @@
     margin: 0 10px;
     align-self: center;
     justify-self: center;
+    color: black;
+  }
+}
+
+.file-plate{
+  width: 150px;
+  height: 150px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__img{
+    height: 100px;
+    width: 100px;
+  }
+
+  &__btns{
+    display: none;
+  }
+  &:hover &__btns{
+    display: flex;
+    width: 60%;
+    justify-content: space-around;
+    flex-direction: row;
+  }
+
+  &__name{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
   }
 }
