--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -25,6 +25,12 @@
     width: 200px;
     margin-left: 30px;
   }
+
+  &__avatar{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
 }
 
 .container{
